[package]
name = "rusty_manager_bot"
version = "0.5.2"
authors = ["Ilya Venner <ilyavenner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
carapax = "0.10.0"
log = "0.4.14"
chrono = "0.4.19"
async-trait = "0.1.42"
snafu = "0.6.10"
clap = "2.33.3"

[dependencies.tokio]
version = "1.2.0"
features = ["full"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[[bin]]
name = "rusty-manager-bot"
path = "src/main.rs"
