[package]
name = "io_proxy_bot"
version = "0.7.0"
authors = ["Ilya Venner <ilyavenner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
chrono = "0.4"
async-trait = "0.1"
snafu = "0.6"
clap = "2.33"
humantime = "2.1"
display-error-chain = "0.1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.fern]
version = "0.6"
features = ["colored"]

[dependencies.teloxide]
version = "0.5"
features = ["auto-send"]

[[bin]]
name = "io-proxy-bot"
path = "src/main.rs"
